# bindicator

./: .gitignore  Cargo.toml  Trunk.toml  http-server.toml  index.html
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main.yml
docs/: README.md
src/: bins.rs  clock.rs  components.rs  context.rs  location.rs  main-old.rs  main-slint.rs  main.rs  utils.rs  weather.rs
src/components/: bin.rs  carousel.rs  clock.rs  dim.rs  location_input.rs  weather.rs  weather_daily.rs  weather_hourly.rs
src/context/: bussin.rs  location.rs  weather.rs
ui/: api.slint  app.slint  common.slint
ui/components/: bin.slint  bins.slint  time.slint
ui/pages/: home_page.slint  settings_page.slint
