[package]
name = "bindicator"
version = "0.2.0"
edition = "2021"

[dependencies]
charming = { version = "0.5.1", features = ["wasm"] }
chrono = "0.4.41"
futures = "0.3.31"
gloo-console = "0.3.0"
gloo-net = "0.6.0"
gloo-storage = "0.3.0"
serde = { version = "1.0.217", features = ["derive"] }
web-sys = { version = "0.3.77", features = ["HtmlFormElement"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-hooks = "0.3.3"
