[package]
name = "bindicator"
version = "0.2.0"
edition = "2021"
build = "build.rs"
publish = false


[[bin]]
path = "src/main-slint.rs"
name = "bindicator"


[dependencies]
charming = { version = "0.6.0", features = ["wasm"] }
chrono = "0.4.41"
futures = "0.3.31"
gloo-console = "0.3.0"
gloo-net = "0.6.0"
gloo-storage = "0.3.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.140"
slint = { version = "1.12.1", features = ["gettext"] }
web-sys = { version = "0.3.77", features = ["HtmlFormElement"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-hooks = "0.3.3"

[build-dependencies]
slint-build = { version = "1.12.1" }
