[package]
name = "bindicator"
version = "0.2.0"
edition = "2021"
build = "build.rs"
publish = false


[dependencies]
charming = { version = "0.6.0", features = ["wasm"] }
chrono = "0.4.41"
console_error_panic_hook = "0.1.7"
futures = "0.3.31"
gloo-console = "0.3.0"
gloo-net = "0.6.0"
gloo-storage = "0.3.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"
slint = { version = "1.12.1", features = ["gettext"] }
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["HtmlFormElement"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-hooks = "0.3.3"

[build-dependencies]
slint-build = { version = "1.12.1" }
